# fount

core/: Cargo.toml
core/src/: main.rs
core/src/configs/: mod.rs  paths.rs  setup.rs
core/src/controllers/: db.rs
core/src/models/: configs.rs  database.rs  mod.rs  users.rs
core/src/routes/: greeting.rs  mod.rs
core/src/tests/: configs.rs
