[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
home = "0.5.9"
mongodb = "2.8.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
toml = "0.8.8"
